# rust-uefi-std-stub

./: Cargo.toml  readme.md
src/: error.rs  lib.rs  prelude.rs  time.rs
src/io/: error.rs  impls.rs  mod.rs  util.rs
src/io/error/: tests.rs
src/sys/: mod.rs
